--- a/package.json
+++ b/package.json
@@ -26,16 +26,19 @@
     "tslint": "tsc --noEmit && tslint -c tslint.json -p tsconfig.json -t stylish src/MailgunTransport.ts"
   },
   "dependencies": {
-    "form-data": "^4.0.0"
+    "form-data": "^4.0.0",
+    "http-errors": "^2.0.0"
   },
   "peerDependencies": {
     "nodemailer": ">=6.0.0"
   },
   "devDependencies": {
+    "@types/http-errors": "^2.0.1",
     "@types/jest": "^27.5.1",
     "@types/node": "^17.0.33",
     "@types/nodemailer": "^6.4.4",
     "jest": "^28.1.0",
+    "node-notifier": "^10.0.1",
     "nodemailer": "^6.7.5",
     "ts-jest": "^28.0.2",
     "tslint": "^6.1.3",
